--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-boilerplate",
+  "name": "boilerplate-backend",
   "version": "1.0.0",
   "description": "Projeto base para iniciar novas API's para projetos ICTS/Denso.",
   "author": "Grupo ICTS",
