--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Aplication
-PORT_BACKEND=<port>
+PORT=<port>
 
 # Database
 DATABASE_URL=sqlserver://<host>:<port>;database=<database>;user=<user>;password=<password>;encrypt=true;trustServerCertificate=true
