--- a/package.json
+++ b/package.json
@@ -1,69 +1,62 @@
 {
-  "name": "boilerplate-backend",
+  "name": "sales-api",
   "version": "1.0.0",
-  "description": "Projeto base para iniciar novas API's para projetos ICTS/Denso.",
-  "author": "Grupo ICTS",
+  "description": "API para registros de vendas pessoais.",
+  "author": "Rickson Thompson",
   "private": true,
   "license": "UNLICENSED",
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "scripts": {
     "start:debug": "nest start --debug --watch",
     "build": "nest build",
     "start": "npx prisma migrate dev && nest start",
     "start:dev": "yarn migrate:dev && nest start --watch",
-    "prepare": "husky install",
-    "commit": "git-cz",
-    "migrate:prod": "prisma migrate deploy",
     "migrate:dev": "npx prisma migrate dev",
-    "generate:schemas": "prisma generate",
     "test:watch": "jest --watchAll",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "MOCK_SERVER=true jest --config ./test/jest-e2e.json --runInBand --forceExit"
   },
   "dependencies": {
-    "@golevelup/ts-jest": "^0.3.3",
-    "@nestjs/common": "9.1.4",
-    "@nestjs/config": "2.2.0",
-    "@nestjs/core": "9.1.4",
-    "@nestjs/platform-express": "9.1.4",
-    "@prisma/client": "4.4.0",
-    "axios": "1.1.2",
+    "@golevelup/ts-jest": "0.3.5",
+    "@nestjs/common": "9.4.0",
+    "@nestjs/config": "2.3.1",
+    "@nestjs/core": "9.4.0",
+    "@nestjs/platform-express": "9.4.0",
+    "@prisma/client": "4.13.0",
+    "axios": "1.3.6",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "0.14.0",
     "crypto": "^1.0.1",
     "date-fns": "2.29.3",
-    "date-fns-tz": "1.3.7",
-    "mssql": "9.0.1",
+    "date-fns-tz": "2.0.0",
     "nestjs-request-context": "2.1.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "7.5.7",
+    "rxjs": "7.8.0",
     "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.1.2",
-    "@commitlint/config-conventional": "17.1.0",
-    "@nestjs/cli": "9.1.4",
-    "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.1.4",
+    "@nestjs/cli": "9.4.2",
+    "@nestjs/schematics": "9.1.0",
+    "@nestjs/testing": "9.4.0",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
-    "@types/express": "4.17.14",
-    "@types/jest": "29.1.2",
-    "@types/node": "18.8.3",
+    "@types/express": "4.17.17",
+    "@types/jest": "29.5.1",
+    "@types/node": "18.16.0",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
-    "commitizen": "4.2.5",
-    "cz-conventional-changelog": "3.3.0",
-    "husky": "8.0.1",
-    "jest": "^29.1.2",
-    "prisma": "4.4.0",
+    "@types/uuid": "9.0.1",
+    "jest": "29.5.0",
+    "prisma": "4.13.0",
     "standard-version": "^9.3.2",
-    "supertest": "^6.3.0",
-    "ts-jest": "^29.0.3",
-    "ts-loader": "9.4.1",
+    "supertest": "6.3.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "4.8.4"
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -95,10 +88,5 @@
       ".module.ts",
       ".repository.ts"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
